--- a/public/template/add.html
+++ b/public/template/add.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-xs-12">
 <!--基本信息  begin-->
-                <div class="panel panel-default">
+                <div class="panel panel-info">
                     <div class="panel-heading">
                         <h3 class="panel-title">一、基本信息</h3>
                     </div>
@@ -46,7 +46,7 @@
 <!--基本信息 end-->
 
 <!--临床表现 begin-->
-                <div class="panel panel-default">
+                <div class="panel panel-success">
                     <div class="panel-heading">
                         <h3 class="panel-title">二、临床表现</h3>
                     </div>
@@ -111,7 +111,7 @@
 <!--临床表现 end-->
 
 <!--体征 begin-->
-                <div class="panel panel-default">
+                <div class="panel panel-warning">
                     <div class="panel-heading">
                         <h3 class="panel-title">三、体征</h3>
                     </div>
@@ -122,7 +122,7 @@
 <!--体征 end-->
 
 <!--检验 begin-->
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h3 class="panel-title">四、检验</h3>
                     </div>
@@ -319,7 +319,7 @@
                         </table>
 
                         <table class="table">
-                            <caption>4、甲状腺功能</caption>
+                            <caption>5、RAAS系统</caption>
                             <thead>
                             <tr>
                                 <th class="text-center">日期</th>
@@ -357,6 +357,195 @@
                     </div>
                 </div>
 <!--检验 end-->
+
+<!--检查 begin-->
+                <div class="panel panel-danger">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">五、检查</h3>
+                    </div>
+                    <div class="panel-body text-center">
+                        <table style="width: 100%;">
+                            <caption>1、胸片</caption>
+                            <tr>
+                                <td>
+                                    <textarea style="width: 90%;height: 100px"></textarea>
+                                </td>
+                            </tr>
+                        </table>
+                        <table style="width: 100%;">
+                            <caption>2、心电图</caption>
+                            <tr>
+                                <td>
+                                    <textarea style="width: 90%;height: 100px"></textarea>
+                                </td>
+                            </tr>
+                        </table>
+                        <table style="width: 100%;">
+                            <caption>3、Holter</caption>
+                            <tr>
+                                <td>
+                                    <textarea style="width: 90%;height: 100px"></textarea>
+                                </td>
+                            </tr>
+                        </table>
+
+                        <table class="table">
+                            <caption>4、超声心电图</caption>
+                            <thead>
+                            <tr>
+                                <th class="text-center">日期</th>
+                                <th class="text-center">LA</th>
+                                <th class="text-center">LVED</th>
+                                <th class="text-center">间隔壁</th>
+                                <th class="text-center">后壁</th>
+                                <th class="text-center">前壁</th>
+                                <th class="text-center">侧壁</th>
+                                <th class="text-center">下壁</th>
+                                <th class="text-center">EF</th>
+                                <th class="text-center">FS</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td class="text-center">
+                                    <input type="text" style="width:75px" ng-model="cases.p2_1_1">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:75px" ng-model="cases.p2_1_1">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:75px" ng-model="cases.p2_1_2">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:75px" ng-model="cases.p2_1_3">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:75px" ng-model="cases.p2_1_4">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:75px" ng-model="cases.p2_1_1">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:75px" ng-model="cases.p2_1_2">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:75px" ng-model="cases.p2_1_4">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:75px" ng-model="cases.p2_1_1">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:75px" ng-model="cases.p2_1_2">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="text-center">
+                                    结论
+                                </td>
+                                <td class="text-center" colspan="9">
+                                    <textarea style="width: 90%;height: 50px"></textarea>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="10">
+                                    <button class="btn btn-info pull-left">新增</button>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+
+                        <table class="table">
+                            <caption>5、心脏核磁检查</caption>
+                            <thead>
+                            <tr>
+                                <th class="text-center">日期</th>
+                                <th class="text-center">T2WI</th>
+                                <th class="text-center">EGE</th>
+                                <th class="text-center">LGE</th>
+                                <th class="text-center">备注</th>
+                                <th class="text-center">总分</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td class="text-center">
+                                    <input type="text" style="width:120px" ng-model="cases.p2_1_1">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:120px" ng-model="cases.p2_1_1">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:120px" ng-model="cases.p2_1_2">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:120px" ng-model="cases.p2_1_3">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:120px" ng-model="cases.p2_1_4">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width:120px" ng-model="cases.p2_1_1">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="6">
+                                    <button class="btn btn-info pull-left">新增</button>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+<!--检查 end-->
+
+<!--结果判定 begin-->
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">六、结果判定</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th class="text-center">日期</th>
+                                <th class="text-center">项目1</th>
+                                <th class="text-center">项目2</th>
+                                <th class="text-center">项目3</th>
+                                <th class="text-center">项目4</th>
+                                <th class="text-center">总分</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td class="text-center">
+                                    <input type="text" style="width: 120px" ng-model="cases.p2_1_1">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width: 120px" ng-model="cases.p2_1_2">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width: 120px" ng-model="cases.p2_1_3">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width: 120px" ng-model="cases.p2_1_4">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width: 120px" ng-model="cases.p2_1_3">
+                                </td>
+                                <td class="text-center">
+                                    <input type="text" style="width: 120px" ng-model="cases.p2_1_4">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="6">
+                                    <button class="btn btn-info">新增</button>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+<!--结果判定 end-->
 
             </div>
         </div>
