--- a/public/template/add.html
+++ b/public/template/add.html
@@ -143,7 +143,7 @@
                     </div>
                     <div class="panel-body text-center">
                         <table class="table">
-                            <caption>1、血常规</caption>
+                            <caption class="text-left">1、血常规</caption>
                             <thead>
                             <tr>
                                 <th class="text-center">日期</th>
@@ -209,7 +209,7 @@
                             </tbody>
                         </table>
                         <table class="table">
-                            <caption>2、生化指标及心肌酶</caption>
+                            <caption class="text-left">2、生化指标及心肌酶</caption>
                             <thead>
                             <tr>
                                 <th class="text-center">日期</th>
@@ -271,7 +271,7 @@
                         </table>
 
                         <table class="table">
-                            <caption>3、病原学检查</caption>
+                            <caption class="text-left">3、病原学检查</caption>
                             <thead>
                             <tr>
                                 <th class="text-center">日期</th>
@@ -328,7 +328,7 @@
                         </table>
 
                         <table class="table">
-                            <caption>4、甲状腺功能</caption>
+                            <caption class="text-left">4、甲状腺功能</caption>
                             <thead>
                             <tr>
                                 <th class="text-center">日期</th>
@@ -385,7 +385,7 @@
                         </table>
 
                         <table class="table">
-                            <caption>5、RAAS系统</caption>
+                            <caption class="text-left">5、RAAS系统</caption>
                             <thead>
                             <tr>
                                 <th class="text-center">日期</th>
@@ -441,7 +441,7 @@
                     </div>
                     <div class="panel-body text-center">
                         <table style="width: 100%;">
-                            <caption>1、胸片</caption>
+                            <caption class="text-left">1、胸片</caption>
                             <tr>
                                 <td>
                                     <textarea style="width: 90%;height: 100px" ng-model="cases.p5.sp1" ng-show="mode=='edit' || mode=='add'"></textarea>
@@ -450,7 +450,7 @@
                             </tr>
                         </table>
                         <table style="width: 100%;">
-                            <caption>2、心电图</caption>
+                            <caption class="text-left">2、心电图</caption>
                             <tr>
                                 <td>
                                     <textarea style="width: 90%;height: 100px" ng-model="cases.p5.sp2" ng-show="mode=='edit' || mode=='add'"></textarea>
@@ -459,7 +459,7 @@
                             </tr>
                         </table>
                         <table style="width: 100%;">
-                            <caption>3、Holter</caption>
+                            <caption class="text-left">3、Holter</caption>
                             <tr>
                                 <td>
                                     <textarea style="width: 90%;height: 100px" ng-model="cases.p5.sp3" ng-show="mode=='edit' || mode=='add'"></textarea>
@@ -469,7 +469,7 @@
                         </table>
 
                         <table class="table">
-                            <caption>4、超声心电图</caption>
+                            <caption class="text-left">4、超声心电图</caption>
                             <thead>
                             <tr>
                                 <th class="text-center">日期</th>
@@ -550,7 +550,7 @@
                         </table>
 
                         <table class="table">
-                            <caption>5、心脏核磁检查</caption>
+                            <caption class="text-left">5、心脏核磁检查</caption>
                             <thead>
                             <tr>
                                 <th class="text-center">日期</th>
