--- a/public/template/list.html
+++ b/public/template/list.html
@@ -1,3 +1,12 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-1"></div>
+            <div class="col-xs-10"><a class="btn btn-default pull-right" style="margin-top: 6px" ng-click="onLogout()">退出</a></div>
+            <div class="col-xs-1"></div>
+        </div>
+    </div>
+</nav>
 <div class="page-header">
     <h1 style="margin: 20px 0px 0px 100px" class="text-info">病例列表</h1>
 </div>
